--- a/styles/inventory/_inventory.css
+++ b/styles/inventory/_inventory.css
@@ -1,5 +1,8 @@
 
 
+/************************************/
+/********** FILTER SIDEBAR **********/
+/************************************/
 /* show */
 .slide-in-filter-section {
   transform: translateX(-200%);
