--- a/styles/ui/_active.css
+++ b/styles/ui/_active.css
@@ -1,6 +1,131 @@
-@import "./_theme.css";
+@import "./../_theme.css";
 
-/* SWIPER PAGINATION */
+/****** MENU SIDEBAR *******/
+/* show menu */
+.slide-in-menu {
+  transform: translateX(-100%);
+  animation: slideInMenu 300ms ease-in-out forwards;
+}
+@keyframes slideInMenu {
+  from { transform: translateX(-100%); }
+  to { transform: translateX(0); }
+}
+/* hide menu */
+.slide-out-menu {
+  transform: translateX(0);
+  animation: slideOutMenu 300ms ease-in-out forwards;
+}
+@keyframes slideOutMenu {
+  from { transform: translateX(0); }
+  to { transform: translateX(-100%); }
+}
+
+/******************************************/
+/**** MENU ****/
+/* MENU + ACTIVE / SUBMENU + ACTIVE */
+.menu-item > .menu-item-link {
+  color: var(--black);
+}
+.menu-item > .menu-item-link:hover,
+.menu-item > .menu-item-link.active {
+  background-color: var(--white);
+  color: var(--first);
+  font-weight: 900;
+}
+.menu-item > .menu-item-link > .menu-item-icon,
+.menu-item > .menu-item-link > .menu-item-icon {
+  color: inherit;
+}
+/* .menu-item > .menu-item-link:hover > .menu-item-icon, */
+.menu-item > .menu-item-link.active > .menu-item-icon {
+  transform: rotate(90deg);
+  color: inherit;
+}
+.menu-item > .submenu-list > .submenu-link {
+  color: var(--black);
+  background-color: var(--white);
+}
+.menu-item > .submenu-list > .submenu-link:hover,
+.menu-item > .submenu-list > .submenu-link.active {
+  color: var(--first);
+  background-color: var(--white);
+}
+.menu-item > .submenu-list.active {
+  display: block;
+}
+.menu-item > .submenu-list:not(.active) {
+  display: none;
+}
+/*** SUBMENU ANIMATION ***/
+/* slide in submenu */
+.menu-item > .submenu-list.slide-in-submenu {
+  animation: slideInSubmenu 200ms linear forwards;
+}
+@keyframes slideInSubmenu {
+  0% {
+    opacity: 0;
+    transform: scaleY(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+}
+/* slide out submenu */
+.menu-item > .submenu-list.slide-out-submenu {
+  animation: slideOutSubmenu 200ms linear forwards;
+}
+@keyframes slideOutSubmenu {
+  0% {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scaleY(0);
+  }
+}
+
+/******************************************/
+/**** FAVOURITE LIST SIDEBAR ****/
+/* show favorite */
+.slide-in-favorite {
+  transform: translateX(100%);
+  animation: slideInFavorite 300ms ease-in-out forwards;
+}
+@keyframes slideInFavorite {
+  from { transform: translateX(100%); }
+  to { transform: translateX(0); }
+}
+/* hide favorite */
+.slide-out-favorite {
+  transform: translateX(0);
+  animation: slideOutFavorite 300ms ease-in-out forwards;
+}
+@keyframes slideOutFavorite {
+  from { transform: translateX(0); }
+  to { transform: translateX(100%); }
+}
+
+
+
+/******************************************/
+/**** SWIPER JS PAGINATION ****/
 .swiper-pagination > .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: var(--first) !important;
+}
+
+/******************************************/
+/**** PAGINATION CONTROLS ****/
+.page-item.active .page-link {
+  background-color: var(--first) !important;
+  border-color: var(--first) !important;
+}
+.page-item.left:first-child {
+  position: absolute;
+  left: 0;
+}
+.page-item.right:last-child {
+  position: absolute;
+  right: 0;
 }
