--- a/styles/ui/_animations.css
+++ b/styles/ui/_animations.css
@@ -63,3 +63,19 @@
   }
 }
 
+/* *** OVERLAY *** */
+.fade-in-anim {
+  animation: fadeInAnim 300ms linear forwards;
+}
+@keyframes fadeInAnim {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+/* fade out anim */
+.fade-out-anim {
+  animation: fadeOutAnim 300ms linear forwards;
+}
+@keyframes fadeOutAnim {
+  0% { opacity: 1; }
+  100% { opacity: 0; }
+}
