inventory listing + about-us

--- a/styles/_tailwind.css
+++ b/styles/_tailwind.css
@@ -35179,7 +35179,7 @@ video {
   }
 
   .sm\:table-column {
-    display: table-column
+    display: table-column !important;
   }
 
   .sm\:table-column-group {
@@ -35199,7 +35199,7 @@ video {
   }
 
   .sm\:table-row {
-    display: table-row
+    display: table-row !important;
   }
 
   .sm\:flow-root {
@@ -39080,11 +39080,11 @@ video {
   }
 
   .sm\:grid-flow-row {
-    grid-auto-flow: row
+    grid-auto-flow: row !important;
   }
 
   .sm\:grid-flow-col {
-    grid-auto-flow: column
+    grid-auto-flow: column !important;
   }
 
   .sm\:grid-flow-row-dense {
@@ -39192,23 +39192,23 @@ video {
   }
 
   .sm\:flex-row {
-    flex-direction: row
+    flex-direction: row !important;
   }
 
   .sm\:flex-row-reverse {
-    flex-direction: row-reverse
+    flex-direction: row-reverse !important;
   }
 
   .sm\:flex-col {
-    flex-direction: column
+    flex-direction: column !important;
   }
 
   .sm\:flex-col-reverse {
-    flex-direction: column-reverse
+    flex-direction: column-reverse !important;
   }
 
   .sm\:flex-wrap {
-    flex-wrap: wrap
+    flex-wrap: wrap !important;
   }
 
   .sm\:flex-wrap-reverse {
@@ -41254,7 +41254,7 @@ video {
   }
 
   .sm\:overflow-scroll {
-    overflow: scroll
+    overflow: scroll !important;
   }
 
   .sm\:overflow-x-auto {
@@ -41282,11 +41282,11 @@ video {
   }
 
   .sm\:overflow-x-scroll {
-    overflow-x: scroll
+    overflow-x: scroll !important;
   }
 
   .sm\:overflow-y-scroll {
-    overflow-y: scroll
+    overflow-y: scroll !important;
   }
 
   .sm\:overscroll-auto {
@@ -41348,15 +41348,15 @@ video {
   }
 
   .sm\:whitespace-pre {
-    white-space: pre
+    white-space: pre !important;
   }
 
   .sm\:whitespace-pre-line {
-    white-space: pre-line
+    white-space: pre-line !important;
   }
 
   .sm\:whitespace-pre-wrap {
-    white-space: pre-wrap
+    white-space: pre-wrap !important;
   }
 
   .sm\:break-normal {
@@ -41365,11 +41365,11 @@ video {
   }
 
   .sm\:break-words {
-    overflow-wrap: break-word
+    overflow-wrap: break-word !important;
   }
 
   .sm\:break-all {
-    word-break: break-all
+    word-break: break-all !important;
   }
 
   .sm\:rounded-none {
@@ -49975,7 +49975,7 @@ video {
   }
 
   .sm\:bg-scroll {
-    background-attachment: scroll
+    background-attachment: scroll !important;
   }
 
   .sm\:bg-clip-border {
@@ -64402,7 +64402,7 @@ video {
   }
 
   .md\:table-column {
-    display: table-column
+    display: table-column !important;
   }
 
   .md\:table-column-group {
@@ -64422,7 +64422,7 @@ video {
   }
 
   .md\:table-row {
-    display: table-row
+    display: table-row !important;
   }
 
   .md\:flow-root {
@@ -68303,11 +68303,11 @@ video {
   }
 
   .md\:grid-flow-row {
-    grid-auto-flow: row
+    grid-auto-flow: row !important;
   }
 
   .md\:grid-flow-col {
-    grid-auto-flow: column
+    grid-auto-flow: column !important;
   }
 
   .md\:grid-flow-row-dense {
@@ -68415,23 +68415,23 @@ video {
   }
 
   .md\:flex-row {
-    flex-direction: row
+    flex-direction: row !important;
   }
 
   .md\:flex-row-reverse {
-    flex-direction: row-reverse
+    flex-direction: row-reverse !important;
   }
 
   .md\:flex-col {
-    flex-direction: column
+    flex-direction: column !important;
   }
 
   .md\:flex-col-reverse {
-    flex-direction: column-reverse
+    flex-direction: column-reverse !important;
   }
 
   .md\:flex-wrap {
-    flex-wrap: wrap
+    flex-wrap: wrap !important;
   }
 
   .md\:flex-wrap-reverse {
@@ -70477,7 +70477,7 @@ video {
   }
 
   .md\:overflow-scroll {
-    overflow: scroll
+    overflow: scroll !important;
   }
 
   .md\:overflow-x-auto {
@@ -70505,11 +70505,11 @@ video {
   }
 
   .md\:overflow-x-scroll {
-    overflow-x: scroll
+    overflow-x: scroll !important;
   }
 
   .md\:overflow-y-scroll {
-    overflow-y: scroll
+    overflow-y: scroll !important;
   }
 
   .md\:overscroll-auto {
@@ -70571,15 +70571,15 @@ video {
   }
 
   .md\:whitespace-pre {
-    white-space: pre
+    white-space: pre !important;
   }
 
   .md\:whitespace-pre-line {
-    white-space: pre-line
+    white-space: pre-line !important;
   }
 
   .md\:whitespace-pre-wrap {
-    white-space: pre-wrap
+    white-space: pre-wrap !important;
   }
 
   .md\:break-normal {
@@ -70588,11 +70588,11 @@ video {
   }
 
   .md\:break-words {
-    overflow-wrap: break-word
+    overflow-wrap: break-word !important;
   }
 
   .md\:break-all {
-    word-break: break-all
+    word-break: break-all !important;
   }
 
   .md\:rounded-none {
@@ -79198,7 +79198,7 @@ video {
   }
 
   .md\:bg-scroll {
-    background-attachment: scroll
+    background-attachment: scroll !important;
   }
 
   .md\:bg-clip-border {
@@ -93625,7 +93625,7 @@ video {
   }
 
   .lg\:table-column {
-    display: table-column
+    display: table-column !important;
   }
 
   .lg\:table-column-group {
@@ -93645,7 +93645,7 @@ video {
   }
 
   .lg\:table-row {
-    display: table-row
+    display: table-row !important;
   }
 
   .lg\:flow-root {
@@ -97526,11 +97526,11 @@ video {
   }
 
   .lg\:grid-flow-row {
-    grid-auto-flow: row
+    grid-auto-flow: row !important;
   }
 
   .lg\:grid-flow-col {
-    grid-auto-flow: column
+    grid-auto-flow: column !important;
   }
 
   .lg\:grid-flow-row-dense {
@@ -97638,23 +97638,23 @@ video {
   }
 
   .lg\:flex-row {
-    flex-direction: row
+    flex-direction: row !important;
   }
 
   .lg\:flex-row-reverse {
-    flex-direction: row-reverse
+    flex-direction: row-reverse !important;
   }
 
   .lg\:flex-col {
-    flex-direction: column
+    flex-direction: column !important;
   }
 
   .lg\:flex-col-reverse {
-    flex-direction: column-reverse
+    flex-direction: column-reverse !important;
   }
 
   .lg\:flex-wrap {
-    flex-wrap: wrap
+    flex-wrap: wrap !important;
   }
 
   .lg\:flex-wrap-reverse {
@@ -99700,7 +99700,7 @@ video {
   }
 
   .lg\:overflow-scroll {
-    overflow: scroll
+    overflow: scroll !important;
   }
 
   .lg\:overflow-x-auto {
@@ -99728,11 +99728,11 @@ video {
   }
 
   .lg\:overflow-x-scroll {
-    overflow-x: scroll
+    overflow-x: scroll !important;
   }
 
   .lg\:overflow-y-scroll {
-    overflow-y: scroll
+    overflow-y: scroll !important;
   }
 
   .lg\:overscroll-auto {
@@ -99794,15 +99794,15 @@ video {
   }
 
   .lg\:whitespace-pre {
-    white-space: pre
+    white-space: pre !important;
   }
 
   .lg\:whitespace-pre-line {
-    white-space: pre-line
+    white-space: pre-line !important;
   }
 
   .lg\:whitespace-pre-wrap {
-    white-space: pre-wrap
+    white-space: pre-wrap !important;
   }
 
   .lg\:break-normal {
@@ -99811,11 +99811,11 @@ video {
   }
 
   .lg\:break-words {
-    overflow-wrap: break-word
+    overflow-wrap: break-word !important;
   }
 
   .lg\:break-all {
-    word-break: break-all
+    word-break: break-all !important;
   }
 
   .lg\:rounded-none {
@@ -108421,7 +108421,7 @@ video {
   }
 
   .lg\:bg-scroll {
-    background-attachment: scroll
+    background-attachment: scroll !important;
   }
 
   .lg\:bg-clip-border {
@@ -122848,7 +122848,7 @@ video {
   }
 
   .xl\:table-column {
-    display: table-column
+    display: table-column !important;
   }
 
   .xl\:table-column-group {
@@ -122868,7 +122868,7 @@ video {
   }
 
   .xl\:table-row {
-    display: table-row
+    display: table-row !important;
   }
 
   .xl\:flow-root {
@@ -126749,11 +126749,11 @@ video {
   }
 
   .xl\:grid-flow-row {
-    grid-auto-flow: row
+    grid-auto-flow: row !important;
   }
 
   .xl\:grid-flow-col {
-    grid-auto-flow: column
+    grid-auto-flow: column !important;
   }
 
   .xl\:grid-flow-row-dense {
@@ -126861,23 +126861,23 @@ video {
   }
 
   .xl\:flex-row {
-    flex-direction: row
+    flex-direction: row !important;
   }
 
   .xl\:flex-row-reverse {
-    flex-direction: row-reverse
+    flex-direction: row-reverse !important;
   }
 
   .xl\:flex-col {
-    flex-direction: column
+    flex-direction: column !important;
   }
 
   .xl\:flex-col-reverse {
-    flex-direction: column-reverse
+    flex-direction: column-reverse !important;
   }
 
   .xl\:flex-wrap {
-    flex-wrap: wrap
+    flex-wrap: wrap !important;
   }
 
   .xl\:flex-wrap-reverse {
@@ -128923,7 +128923,7 @@ video {
   }
 
   .xl\:overflow-scroll {
-    overflow: scroll
+    overflow: scroll !important;
   }
 
   .xl\:overflow-x-auto {
@@ -128951,11 +128951,11 @@ video {
   }
 
   .xl\:overflow-x-scroll {
-    overflow-x: scroll
+    overflow-x: scroll !important;
   }
 
   .xl\:overflow-y-scroll {
-    overflow-y: scroll
+    overflow-y: scroll !important;
   }
 
   .xl\:overscroll-auto {
@@ -129017,15 +129017,15 @@ video {
   }
 
   .xl\:whitespace-pre {
-    white-space: pre
+    white-space: pre !important;
   }
 
   .xl\:whitespace-pre-line {
-    white-space: pre-line
+    white-space: pre-line !important;
   }
 
   .xl\:whitespace-pre-wrap {
-    white-space: pre-wrap
+    white-space: pre-wrap !important;
   }
 
   .xl\:break-normal {
@@ -129034,11 +129034,11 @@ video {
   }
 
   .xl\:break-words {
-    overflow-wrap: break-word
+    overflow-wrap: break-word !important;
   }
 
   .xl\:break-all {
-    word-break: break-all
+    word-break: break-all !important;
   }
 
   .xl\:rounded-none {
@@ -137644,7 +137644,7 @@ video {
   }
 
   .xl\:bg-scroll {
-    background-attachment: scroll
+    background-attachment: scroll !important;
   }
 
   .xl\:bg-clip-border {
@@ -152071,7 +152071,7 @@ video {
   }
 
   .\32xl\:table-column {
-    display: table-column
+    display: table-column !important;
   }
 
   .\32xl\:table-column-group {
@@ -152091,7 +152091,7 @@ video {
   }
 
   .\32xl\:table-row {
-    display: table-row
+    display: table-row !important;
   }
 
   .\32xl\:flow-root {
@@ -155972,11 +155972,11 @@ video {
   }
 
   .\32xl\:grid-flow-row {
-    grid-auto-flow: row
+    grid-auto-flow: row !important;
   }
 
   .\32xl\:grid-flow-col {
-    grid-auto-flow: column
+    grid-auto-flow: column !important;
   }
 
   .\32xl\:grid-flow-row-dense {
@@ -156084,23 +156084,23 @@ video {
   }
 
   .\32xl\:flex-row {
-    flex-direction: row
+    flex-direction: row !important;
   }
 
   .\32xl\:flex-row-reverse {
-    flex-direction: row-reverse
+    flex-direction: row-reverse !important;
   }
 
   .\32xl\:flex-col {
-    flex-direction: column
+    flex-direction: column !important;
   }
 
   .\32xl\:flex-col-reverse {
-    flex-direction: column-reverse
+    flex-direction: column-reverse !important;
   }
 
   .\32xl\:flex-wrap {
-    flex-wrap: wrap
+    flex-wrap: wrap !important;
   }
 
   .\32xl\:flex-wrap-reverse {
@@ -158146,7 +158146,7 @@ video {
   }
 
   .\32xl\:overflow-scroll {
-    overflow: scroll
+    overflow: scroll !important;
   }
 
   .\32xl\:overflow-x-auto {
@@ -158174,11 +158174,11 @@ video {
   }
 
   .\32xl\:overflow-x-scroll {
-    overflow-x: scroll
+    overflow-x: scroll !important;
   }
 
   .\32xl\:overflow-y-scroll {
-    overflow-y: scroll
+    overflow-y: scroll !important;
   }
 
   .\32xl\:overscroll-auto {
@@ -158240,15 +158240,15 @@ video {
   }
 
   .\32xl\:whitespace-pre {
-    white-space: pre
+    white-space: pre !important;
   }
 
   .\32xl\:whitespace-pre-line {
-    white-space: pre-line
+    white-space: pre-line !important;
   }
 
   .\32xl\:whitespace-pre-wrap {
-    white-space: pre-wrap
+    white-space: pre-wrap !important;
   }
 
   .\32xl\:break-normal {
@@ -158257,11 +158257,11 @@ video {
   }
 
   .\32xl\:break-words {
-    overflow-wrap: break-word
+    overflow-wrap: break-word !important;
   }
 
   .\32xl\:break-all {
-    word-break: break-all
+    word-break: break-all !important;
   }
 
   .\32xl\:rounded-none {
@@ -166867,7 +166867,7 @@ video {
   }
 
   .\32xl\:bg-scroll {
-    background-attachment: scroll
+    background-attachment: scroll !important;
   }
 
   .\32xl\:bg-clip-border {
