--- a/styles/_theme.css
+++ b/styles/_theme.css
@@ -1,19 +1,12 @@
 
 :root {
-  /* --first: #0058BC;
+  --first: #0058BC;
   --first-50: #0058BC50;
   --first-60: #0058BC60;
   --first-70 : #0058BC70;
   --first-80 : #0058BC80;
   --first-90 : #0058BC90;
-  --first-95 : #0058BC95; */
-  --first: #313131;
-  --first-50: #31313150;
-  --first-60: #31313160;
-  --first-70 : #31313170;
-  --first-80 : #31313180;
-  --first-90 : #31313190;
-  --first-95 : #31313195;
+  --first-95 : #0058BC95;
   --second: #FFCC00;
   --second-50: #FFCC0050;
   --second-60: #FFCC0060;
